[package]
name = "qsyncable-sys"
version = "0.1.0"
edition = "2021"
links = "qsyncable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
qmetaobject = "0.2"
qttypes = "0.2"
cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"
semver = "1"
